--- a/src/render/login.html
+++ b/src/render/login.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fast Vite Electron App</title>
+    <title>Welcome Login</title>
   </head>
 
   <body>
     <div id="app"></div>
-    <script type="module" src="./window/index/index.ts"></script>
+    <script type="module" src="./window/login/login.ts"></script>
   </body>
 </html>
